layout issues and bugifxes for  ae layers longer than timeline

--- a/src/style.scss
+++ b/src/style.scss
@@ -174,6 +174,7 @@ main {
         grid-template: repeat(1, 1fr) / repeat(12, 1fr);
         background-color: transparent;
         height: 0;
+        overflow-x: clip;
         .timeline-layer {
             background-color: darkorchid;
             border-radius: 3px;
